--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.sk</groupId>
-    <artifactId>local</artifactId>
+    <artifactId>communication</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>netty</module>
