--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,18 @@
                 <artifactId>jackson-databind</artifactId>
                 <version>2.3.3</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.jibx</groupId>
+                <artifactId>jibx-bind</artifactId>
+                <version>1.3.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.3.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
