--- a/netty/pom.xml
+++ b/netty/pom.xml
@@ -18,7 +18,7 @@
         </dependency>
         <dependency>
             <groupId>org.jibx</groupId>
-            <artifactId>jibx-bind</artifactId>
+            <artifactId>jibx-tools</artifactId>
         </dependency>
     </dependencies>
 
